adaptive fixes & translates

--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
                 <a href="#" data-lang="headerLogin">Увійти</a>
                 <button data-lang="headerRegistration">Реєстрація</button>
             </div>
-            <button class="burger-menu" data-lang="headerMenu">
-                <img src="./images/icons/burger-menu.svg" alt="Меню" />
+            <button class="burger-menu">
+                <img src="./images/icons/burger-menu.svg" alt="Меню" data-lang="headerMenu" />
             </button>
         </header>
 
@@ -203,7 +203,7 @@
                                 <div class="info">
                                     <span
                                         class="heading-md"
-                                        data-lang="webDevSkill"
+                                        data-lang="aboutWebDevSkill"
                                         >Веб розробка</span
                                     >
                                     <span class="percent">90%</span>
@@ -214,7 +214,7 @@
                                 <div class="info">
                                     <span
                                         class="heading-md"
-                                        data-lang="seoSkill"
+                                        data-lang="aboutSeoSkill"
                                         >SEO Оптимізація</span
                                     >
                                     <span class="percent">85%</span>
@@ -225,18 +225,18 @@
                                 <div class="info">
                                     <span
                                         class="heading-md"
-                                        data-lang="marketingSkill"
+                                        data-lang="aboutMarketingSkill"
                                         >Інтернет Маркетинг</span
                                     >
                                     <span class="percent">70%</span>
                                 </div>
-                                <div the="bar"></div>
+                                <div class="bar"></div>
                             </div>
                             <div class="item">
                                 <div class="info">
                                     <span
                                         class="heading-md"
-                                        data-lang="mobileDevSkill"
+                                        data-lang="aboutMobileDevSkill"
                                         >Мобільна розробка</span
                                     >
                                     <span class="percent">40%</span>
@@ -250,98 +250,131 @@
             <!--  -->
             <section class="container why-we">
                 <div class="left-column">
-                    <div class="subtitle">Почему выбирают нас?</div>
-                    <h3>
-                        Продвигайте свой бренд в интернете с современным IT
-                        решениями
+                    <div class="subtitle" data-lang="whyChooseUsSubtitle">
+                        Чому обирають нас?
+                    </div>
+                    <h3 data-lang="whyChooseUsTitle">
+                        Продвигайте свій бренд в інтернеті з сучасними ІТ
+                        рішеннями
                     </h3>
-                    <p class="line-height-md">
-                        Опытная веб студия Skyweb несёт полную ответсвенность за
-                        предоставляемые услуги и гарантирует следующие
-                        преимущества:
+                    <p
+                        class="line-height-md"
+                        data-lang="whyChooseUsDescription"
+                    >
+                        Досвідчена веб студія Skyweb несе повну відповідальність
+                        за надані послуги і гарантує наступні переваги:
                     </p>
                     <div class="advantages">
                         <a href="#">
                             <img src="./images/icons/arrow.svg" alt="Стрелка" />
-                            <span>Приятные сотрудники</span>
+                            <span data-lang="whyChooseUsAdvantage"
+                                >Приємні співробітники</span
+                            >
                         </a>
                         <a href="#">
                             <img src="./images/icons/arrow.svg" alt="Стрелка" />
-                            <span>Приятные сотрудники</span>
+                            <span data-lang="whyChooseUsAdvantage"
+                                >Приємні співробітники</span
+                            >
                         </a>
                         <a href="#">
                             <img src="./images/icons/arrow.svg" alt="Стрелка" />
-                            <span>Приятные сотрудники</span>
+                            <span data-lang="whyChooseUsAdvantage"
+                                >Приємні співробітники</span
+                            >
                         </a>
                         <a href="#">
                             <img src="./images/icons/arrow.svg" alt="Стрелка" />
-                            <span>Приятные сотрудники</span>
+                            <span data-lang="whyChooseUsAdvantage"
+                                >Приємні співробітники</span
+                            >
                         </a>
                         <a href="#">
                             <img src="./images/icons/arrow.svg" alt="Стрелка" />
-                            <span>Приятные сотрудники</span>
+                            <span data-lang="whyChooseUsAdvantage"
+                                >Приємні співробітники</span
+                            >
                         </a>
                         <a href="#">
                             <img src="./images/icons/arrow.svg" alt="Стрелка" />
-                            <span>Приятные сотрудники</span>
+                            <span data-lang="whyChooseUsAdvantage"
+                                >Приємні співробітники</span
+                            >
                         </a>
                     </div>
                 </div>
                 <img
                     src="./images/banners/why-we.png"
-                    alt="Почему выбирают нас?"
+                    alt="Чому обирають нас?"
                     class="banner"
+                    data-lang="whyChooseUsBannerAlt"
                 />
             </section>
             <!--  -->
             <section class="time-in-it">
                 <div class="container">
-                    <div class="heading-lg title">
+                    <div class="heading-lg title" data-lang="timeInItTitle">
                         Более 6 лет опыта в сфере IT
                     </div>
                     <div class="achievements">
                         <div class="item">
                             <img
                                 src="./images/icons/development-time.svg"
-                                alt="Лет в разработке"
+                                alt="Years in development"
                             />
                             <div class="right-column">
                                 <div class="number">6+</div>
-                                <div class="description">Лет в разработке</div>
+                                <div
+                                    class="description"
+                                    data-lang="timeInItYearsInDevelopment"
+                                >
+                                    Років у розробці
+                                </div>
                             </div>
                         </div>
                         <div class="item">
                             <img
                                 src="./images/icons/successed-projects.svg"
-                                alt="Выполненных проектов"
+                                alt="Successful projects"
                             />
                             <div class="right-column">
                                 <div class="number">150+</div>
-                                <div class="description">
-                                    Выполненных проектов
+                                <div
+                                    class="description"
+                                    data-lang="timeInItSuccessfulProjects"
+                                >
+                                    Виконаних проектів
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <img
                                 src="./images/icons/satisfied-clients.svg"
-                                alt="Довольных клиентов"
+                                alt="Satisfied clients"
                             />
                             <div class="right-column">
                                 <div class="number">200+</div>
-                                <div class="description">
-                                    Довольных клиентов
+                                <div
+                                    class="description"
+                                    data-lang="timeInItSatisfiedClients"
+                                >
+                                    Задоволених клієнтів
                                 </div>
                             </div>
                         </div>
                         <div class="item">
                             <img
                                 src="./images/icons/employees-quantity.svg"
-                                alt="Сотрудников"
+                                alt="Employees"
                             />
                             <div class="right-column">
                                 <div class="number">40+</div>
-                                <div class="description">Сотрудников</div>
+                                <div
+                                    class="description"
+                                    data-lang="timeInItEmployees"
+                                >
+                                    Співробітників
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -349,18 +382,40 @@
             </section>
             <!--  -->
             <section class="container join-us">
-                <div class="subtitle">Карьера в IT</div>
-                <div class="heading-lg">Вступайте в нашу команду</div>
+                <div class="subtitle" data-lang="joinUsSubtitle">
+                    Кар'єра в IT
+                </div>
+                <div class="heading-lg" data-lang="joinUsTitle">
+                    Вступайте в нашу команду
+                </div>
                 <div class="jobs">
-                    <div class="heading-md">Веб разработчик</div>
-                    <div class="heading-md">SEO специалист</div>
-                    <div class="heading-md">Интернет маркетолог</div>
-                    <div class="heading-md">SEO копирайтер</div>
-                    <div class="heading-md">Графический дизайнер</div>
-                    <div class="heading-md">UX/UI дизайнер</div>
-                    <div class="heading-md">Менеджер компании</div>
-                    <div class="heading-md">Тестировщик решений</div>
-                    <div class="heading-md">Другая деятельность</div>
+                    <div class="heading-md" data-lang="jobWebDeveloper">
+                        Веб розробник
+                    </div>
+                    <div class="heading-md" data-lang="jobSeoSpecialist">
+                        SEO спеціаліст
+                    </div>
+                    <div class="heading-md" data-lang="jobInternetMarketer">
+                        Інтернет маркетолог
+                    </div>
+                    <div class="heading-md" data-lang="jobSeoCopywriter">
+                        SEO копірайтер
+                    </div>
+                    <div class="heading-md" data-lang="jobGraphicDesigner">
+                        Графічний дизайнер
+                    </div>
+                    <div class="heading-md" data-lang="jobUxUiDesigner">
+                        UX/UI дизайнер
+                    </div>
+                    <div class="heading-md" data-lang="jobCompanyManager">
+                        Менеджер компанії
+                    </div>
+                    <div class="heading-md" data-lang="jobSolutionTester">
+                        Тестувальник рішень
+                    </div>
+                    <div class="heading-md" data-lang="jobOtherActivity">
+                        Інша діяльність
+                    </div>
                 </div>
             </section>
         </main>
@@ -371,31 +426,38 @@
                     <img
                         src="./images/banners/submit-application.png"
                         alt="Оставьте заявку на обратную связь"
+                        data-lang="footerBannerAlt"
                     />
                     <div class="right-column">
-                        <div class="subtitle">Свяжитесь с нами</div>
-                        <h3>Оставьте заявку на обратную связь</h3>
+                        <div class="subtitle" data-lang="footerContactUs">
+                            Зв'яжіться з нами
+                        </div>
+                        <h3 data-lang="footerCallToAction">
+                            Залиште заявку на зворотний зв'язок
+                        </h3>
                         <form action="?" method="POST" id="application-form">
                             <input
                                 type="text"
                                 required
-                                placeholder="Ваше имя"
+                                placeholder="Ваше ім'я"
+                                data-lang="footerYourName"
                             />
                             <input
                                 type="tel"
                                 required
-                                placeholder="Номер телефона"
+                                placeholder="Номер телефону"
+                                data-lang="footerPhoneNumber"
                             />
                             <div
                                 class="g-recaptcha"
                                 data-sitekey="6LfoRg8qAAAAAOBe_X697t8t_KoHjrFq-beZFD1Y"
                             ></div>
-                            <button>Отправить</button>
+                            <button data-lang="footerSend">Відправити</button>
                         </form>
                     </div>
                 </div>
-                <div class="subcontent">
-                    Copyright 2019-2022 © Skyweb Co. Все права защищены.
+                <div class="subcontent" data-lang="footerRights">
+                    Copyright 2019-2022 © Skyweb Co. Всі права захищені.
                 </div>
             </div>
         </footer>
