progress bar fixes

--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
                 <button data-lang="headerRegistration">Реєстрація</button>
             </div>
             <button class="burger-menu">
-                <img src="./images/icons/burger-menu.svg" alt="Меню" data-lang="headerMenu" />
+                <img
+                    src="./images/icons/burger-menu.svg"
+                    alt="Меню"
+                    data-lang="headerMenu"
+                />
             </button>
         </header>
 
@@ -208,7 +212,9 @@
                                     >
                                     <span class="percent">90%</span>
                                 </div>
-                                <div class="bar"></div>
+                                <div class="bar">
+                                    <div class="active web"></div>
+                                </div>
                             </div>
                             <div class="item">
                                 <div class="info">
@@ -219,7 +225,9 @@
                                     >
                                     <span class="percent">85%</span>
                                 </div>
-                                <div class="bar"></div>
+                                <div class="bar">
+                                    <div class="active seo"></div>
+                                </div>
                             </div>
                             <div class="item">
                                 <div class="info">
@@ -230,7 +238,9 @@
                                     >
                                     <span class="percent">70%</span>
                                 </div>
-                                <div class="bar"></div>
+                                <div class="bar">
+                                    <div class="active imarket"></div>
+                                </div>
                             </div>
                             <div class="item">
                                 <div class="info">
@@ -241,7 +251,9 @@
                                     >
                                     <span class="percent">40%</span>
                                 </div>
-                                <div class="bar"></div>
+                                <div class="bar">
+                                    <div class="active mobdev"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
