style & translates fixes

--- a/index.html
+++ b/index.html
@@ -69,8 +69,15 @@
                 <div class="left-column">
                     <h1 data-lang="mainTitle">
                         EPICSTARS — платформа, що об’єднує
-                        <span class="underline" data-lang="mainHighlight"
-                            >рекламодавців та блогерів</span
+                        <span
+                            class="underline"
+                            data-lang="mainHighlightAdvertisers"
+                            >рекламодавців</span
+                        ><span data-lang="mainHighlightAnd">та</span
+                        ><span
+                            class="underline"
+                            data-lang="mainHighlightBlogers"
+                            >блогерів</span
                         >
                     </h1>
                     <h2 data-lang="mainSubtitle">
