--- a/index.html
+++ b/index.html
@@ -22,18 +22,20 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" type="text/css" href="./index.css" />
-
-        <title>Document</title>
+        <title>
+            EPICSTARS — платформа, що об’єднує рекламодавців та блогерів
+        </title>
     </head>
     <body>
         <header class="container">
             <div class="left-column">
-                <img
-                    src="./images/icons/logo.svg"
-                    alt="Логотип"
-                    class="logo"
-                    data-lang="headerLogoAlt"
-                />
+                <a href="/"
+                    ><img
+                        src="./images/icons/logo.svg"
+                        alt="Логотип"
+                        class="logo"
+                        data-lang="headerLogoAlt"
+                /></a>
                 <div class="languages">
                     <button onclick="changeLanguage('eng')">ENG</button>
                     <span>|</span>
@@ -55,7 +57,9 @@
             <div class="right-column">
                 <a href="#" data-lang="headerLogin">Увійти</a>
                 <a href="#">
-                    <button data-lang="headerRegistration">Реєстрація</button>
+                    <button data-lang="headerRegistration" tabindex="-1">
+                        Реєстрація
+                    </button>
                 </a>
             </div>
             <button
@@ -91,7 +95,11 @@
                         Допомагаємо брендам та компаніям транслювати свої
                         маркетингові активності через лідерів думок та блогерів
                     </h2>
-                    <button data-lang="mainCta">давайте почнемо!</button>
+                    <a href="#"
+                        ><button data-lang="mainCta" tabindex="-1">
+                            давайте почнемо!
+                        </button></a
+                    >
                 </div>
                 <img
                     src="./images/banners/main.png"
@@ -415,33 +423,49 @@
                     Вступайте в нашу команду
                 </div>
                 <div class="jobs">
-                    <div class="heading-md" data-lang="jobWebDeveloper">
+                    <a class="heading-md" href="#" data-lang="jobWebDeveloper">
                         Веб розробник
-                    </div>
-                    <div class="heading-md" data-lang="jobSeoSpecialist">
+                    </a>
+                    <a class="heading-md" href="#" data-lang="jobSeoSpecialist">
                         SEO спеціаліст
-                    </div>
-                    <div class="heading-md" data-lang="jobInternetMarketer">
+                    </a>
+                    <a
+                        class="heading-md"
+                        href="#"
+                        data-lang="jobInternetMarketer"
+                    >
                         Інтернет маркетолог
-                    </div>
-                    <div class="heading-md" data-lang="jobSeoCopywriter">
+                    </a>
+                    <a class="heading-md" href="#" data-lang="jobSeoCopywriter">
                         SEO копірайтер
-                    </div>
-                    <div class="heading-md" data-lang="jobGraphicDesigner">
+                    </a>
+                    <a
+                        class="heading-md"
+                        href="#"
+                        data-lang="jobGraphicDesigner"
+                    >
                         Графічний дизайнер
-                    </div>
-                    <div class="heading-md" data-lang="jobUxUiDesigner">
+                    </a>
+                    <a class="heading-md" href="#" data-lang="jobUxUiDesigner">
                         UX/UI дизайнер
-                    </div>
-                    <div class="heading-md" data-lang="jobCompanyManager">
+                    </a>
+                    <a
+                        class="heading-md"
+                        href="#"
+                        data-lang="jobCompanyManager"
+                    >
                         Менеджер компанії
-                    </div>
-                    <div class="heading-md" data-lang="jobSolutionTester">
+                    </a>
+                    <a
+                        class="heading-md"
+                        href="#"
+                        data-lang="jobSolutionTester"
+                    >
                         Тестувальник рішень
-                    </div>
-                    <div class="heading-md" data-lang="jobOtherActivity">
+                    </a>
+                    <a class="heading-md" href="#" data-lang="jobOtherActivity">
                         Інша діяльність
-                    </div>
+                    </a>
                 </div>
             </section>
         </main>
