--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
         <title>
             EPICSTARS — платформа, що об’єднує рекламодавців та блогерів
         </title>
+        <meta
+            name="description"
+            content="Допомагаємо брендам та компаніям транслювати свої маркетингові активності через лідерів думок та блогерів"
+        />
     </head>
     <body>
         <header class="container">
