--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ua">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <!-- Fonts -->
         <link rel="preconnect" href="https://fonts.googleapis.com" />
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <link
@@ -21,7 +22,9 @@
             href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
             rel="stylesheet"
         />
+        <!-- Styles -->
         <link rel="stylesheet" type="text/css" href="./index.css" />
+        <!-- Title & Meta -->
         <title>
             EPICSTARS — платформа, що об’єднує рекламодавців та блогерів
         </title>
@@ -31,6 +34,7 @@
         />
     </head>
     <body>
+        <!-- Header -->
         <header class="container">
             <div class="left-column">
                 <a href="/"
@@ -78,8 +82,9 @@
                 />
             </button>
         </header>
-        <!--  -->
+        <!-- Main -->
         <main>
+            <!-- Main Section -->
             <section class="container main">
                 <div class="left-column">
                     <h1 data-lang="mainTitle">
@@ -112,7 +117,7 @@
                     data-lang="mainBannerAlt"
                 />
             </section>
-            <!--  -->
+            <!-- Services Section -->
             <section class="container services">
                 <article>
                     <img
@@ -205,7 +210,7 @@
                     <a href="#" data-lang="serviceMore">Дізнатися більше</a>
                 </article>
             </section>
-            <!--  -->
+            <!-- About Section -->
             <section class="about">
                 <div class="container">
                     <img
@@ -285,7 +290,7 @@
                     </div>
                 </div>
             </section>
-            <!--  -->
+            <!-- Why We Section -->
             <section class="container why-we">
                 <div class="left-column">
                     <div class="subtitle" data-lang="whyChooseUsSubtitle">
@@ -348,7 +353,7 @@
                     data-lang="whyChooseUsBannerAlt"
                 />
             </section>
-            <!--  -->
+            <!-- Time In IT Section -->
             <section class="time-in-it">
                 <div class="container">
                     <div class="heading-lg title" data-lang="timeInItTitle">
@@ -418,7 +423,7 @@
                     </div>
                 </div>
             </section>
-            <!--  -->
+            <!-- Join Us Section -->
             <section class="container join-us">
                 <div class="subtitle" data-lang="joinUsSubtitle">
                     Кар'єра в IT
@@ -473,7 +478,7 @@
                 </div>
             </section>
         </main>
-        <!--  -->
+        <!-- Footer -->
         <footer>
             <div class="container">
                 <div class="content">
@@ -552,6 +557,7 @@
         </footer>
     </body>
 
+    <!-- Scripts -->
     <script src="./index.js"></script>
     <script src="https://www.google.com/recaptcha/api.js"></script>
 </html>
